<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_light_bg_login"
    tools:context=".view.LoginActivity">


    <View
        android:id="@+id/ellipse_1"
        android:layout_width="33.16dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="134dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ellipse_1"
        app:layout_constraintBottom_toTopOf="@+id/easy_park"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/vector"
        android:layout_width="75dp"
        android:layout_height="75.16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="15dp"
        android:background="@drawable/ic_baseline_place_24"
        app:layout_constraintBottom_toBottomOf="@+id/ellipse_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/easy_park"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="28dp"
        android:gravity="top"
        android:text="@string/easy_park"
        android:textAppearance="@style/easy_park"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmailAddress"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ellipse_1" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/rectangle_1"
        android:gravity="center"
        android:hint="@string/emailLogin"
        android:textAppearance="@style/email"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easy_park" />


    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="59dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/rectangle_1"
        android:gravity="center"
        android:hint="@string/passwordLogin"
        android:inputType="textPassword"
        android:textAppearance="@style/password"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/buttonLoginRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

    <Button
        android:id="@+id/buttonLoginRegister"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="59dp"
        android:background="@drawable/bg_btn"
        android:elevation="5dp"
        android:text="@string/log_in"
        android:textAppearance="@style/log_in"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textViewSwitchLoginregister"
        android:layout_width="194dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/signup"
        android:textAppearance="@style/signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoginRegister" />



</androidx.constraintlayout.widget.ConstraintLayout>